--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -24,7 +24,7 @@
             <a (click)="scroll('projects')" class="link-style-green">projects</a>
             through which I found my passion for research.
             <br>
-            Consider joining my <a href="https://docs.google.com/document/d/1RbV-8csUdIMCBntS5pXBwHel6LvqpaDQWy5w29YISHI/edit" target="_blank" class="link-style-green">reading group</a> about learning on graphs and geometry!
+            Consider joining our <a [routerLink]="['logag-reading-group']" class="link-style-green">reading group</a> about learning on graphs and geometry!
             <br>
             I am always happy to chat about research or anything else! So feel free to contact me:
           </p>
