--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -94,6 +94,25 @@
               <div fxLayout="row">
                 <h3>
                   <a class="item-subtitle link-style-black"
+                     href="/assets/Surgeon.pdf"
+                     target="_blank">Jointly Learnable Data Augmentations for Self-Supervised GNNs</a></h3>
+              </div>
+              <p class="item-date-loc">
+                <fa-icon class="icon-right-margin" [icon]="authors"></fa-icon>
+                Z. Kefato, S. Girdzijauskas, H. Stärk
+              </p>
+              <p class="item-content">
+                Currently under review at
+                <a href="https://www.wsdm-conference.org/2022/" target="_blank"
+                   class="link-style-green">ACM International WSDM Conference</a>.
+              </p>
+            </div>
+            <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+
+            <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+              <div fxLayout="row">
+                <h3>
+                  <a class="item-subtitle link-style-black"
                      href="https://www.biorxiv.org/content/10.1101/2021.04.25.441334v1"
                      target="_blank">Light Attention Predicts Protein Location from the Language of Life</a></h3>
               </div>
